[project]
name = "gdacs-events-scraper"
version = "0.1.0"
description = "Fetch GDACS events and persist them to Microsoft 365 Excel"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "python-dotenv>=1.0.1",
  "PyYAML>=6.0.2",
  "requests>=2.32.3",
]

[dependency-groups]
dev = [
  "pytest>=8.3.2",
  "ruff>=0.6.9",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gdacs_events_scraper"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
